@@ -1,0 +1,4 @@
+file R/imports.R
+
+contains modified code from the R package gridGraphics by Paul Murrell,
+which is licensed under GPL-3.
