@@ -24,6 +24,7 @@ panel.levelplot(x, y, z,
                 border.lty = 1,
                 border.lwd = 0.1,
                 \dots,
+                region.type = c("grid", "filled.contour"),
                 col.regions = regions$col,
                 alpha.regions = regions$alpha,
                 identifier = "levelplot")
@@ -102,6 +103,15 @@ panel.levelplot.raster(x, y, z,
   \item{border.lty, border.lwd}{ Graphical parameters for the border}
 %   \item{cex, col.text, font, fontfamily, fontface}{ graphical parameters for contour labels}
   \item{\dots}{ Extra parameters. }
+  \item{region.type}{
+    A character string, one of \code{"grid"} and \code{"filled.contour"}. The
+    former (the default) uses a grid of rectangles to display the
+    colors for the level plot; the latter uses a grid of polygons, mimicking
+    the behavior of \code{\link{filled.contour}}, which gives a smoother
+    appearance at the cost of increased processing time. The functionality
+    of \code{"filled.contour"} is enabled by borrowed code from Paul Murrel's
+    gridGraphics package.
+  }
   \item{col.regions}{
     A vector of colors, or a function to produce a vecor of colors, to
     be used if \code{region=TRUE}.  Each interval defined by \code{at}
@@ -154,10 +164,13 @@ levelplot(volcano, panel = panel.levelplot.raster,
           col.regions = topo.colors, cuts = 30, interpolate = TRUE)
 
 }
-\author{ Deepayan Sarkar \email{Deepayan.Sarkar@R-project.org}}
+\author{ Deepayan Sarkar \email{Deepayan.Sarkar@R-project.org},
+         Paul Murrell (\code{region.type = "filled.contour"} uses code from
+                       Paul Murrell's gridGraphics package.)}
 \seealso{
   \code{\link{levelplot}},
   \code{\link{level.colors}},
-  \code{\link{contourLines}}
+  \code{\link{contourLines}},
+  \code{\link{filled.contour}}
 }
 \keyword{dplot}
